wat layout dingetjes en quotes mooier gemaakt

--- a/slides/alternative-stories.html
+++ b/slides/alternative-stories.html
@@ -22,8 +22,8 @@
     <h3 class="fragment">Write it down!</h3>
 </section>
 <section>
-    <img class="span" src="resources/extract-58.png" />
+    <img class="stretch" src="resources/extract-58.png" />
 </section>
 <section>
-   <blockquote>&ldquo;Details, alternatives, variations, and exceptions fill in the body of a map.&rdquo;</blockquote>
+   <blockquote>Details, alternatives, variations, and exceptions fill in the body of a map.</blockquote>
 </section>
