--- a/slides/distill-your-backbone.html
+++ b/slides/distill-your-backbone.html
@@ -3,23 +3,23 @@
     <h1>backbone</h1>
 </section>
 <section>
-    <h2>Cluster</h2>
+    <h1>cluster</h1>
     <h3>similar sticky notes</h3>
 </section>
 <section>
     <h3>label</h3>
-    <h2>Activities</h2>
+    <h1>Activities</h1>
 </section>
 <section>
     <h3>put them on</h3>
-    <h2>Top</h2>
+    <h1>TOP</h1>
 </section>
 <section>
-    <img class="span" src="resources/extract-59.png" />
+    <img class="stretch" src="resources/extract-59.png" />
 </section>
 <section>
-   <blockquote>&ldquo;Activities aggregate tasks directed at a common goal.&rdquo;</blockquote>
+   <blockquote>Activities aggregate tasks directed at a common goal.</blockquote>
 </section>
 <section>
-   <blockquote>&ldquo;Activities and high-level tasks form the backbone of a story map.&rdquo;</blockquote>
+   <blockquote>Activities and high-level tasks form the backbone of a story map.</blockquote>
 </section>
