--- a/slides/organize-your-story.html
+++ b/slides/organize-your-story.html
@@ -14,5 +14,5 @@
     <h2>the narrative flow</h2>
 </section>
 <section>
-    <img class="span" src="resources/extract-57.png" />
+    <img class="stretch" src="resources/extract-57.png" />
 </section>
