--- a/slides/slice-out-tasks.html
+++ b/slides/slice-out-tasks.html
@@ -6,8 +6,8 @@
     <h2>overslept!</h2>
 </section>
 <section>
-    <p>Put that on a sticky on the left near the top</p>
-   <blockquote style="font-size: 1.25em">&ldquo;Get out the door in a few minutes&rdquo;</blockquote>
+    <p>Put that on a sticky note on the left near the top</p>
+   <div class="post-it orange">Get out the door in a few minutes</div>
 </section>
 <section>
     <h3>draw a line</h3>
@@ -29,5 +29,5 @@
     <img class="stretch" src="resources/extract-60.png" />
 </section>
 <section>
-    <blockquote>&ldquo;Use slices to identify all the tasks and details relevant to a specific outcome.&rdquo;</blockquote>
+    <blockquote>Use slices to identify all the tasks and details relevant to a specific outcome.</blockquote>
 </section>
