--- a/slides/write-out-your-story.html
+++ b/slides/write-out-your-story.html
@@ -25,8 +25,8 @@
     <img class="stretch" src="resources/extract-54.png" />
 </section> 
 <section>
-    <blockquote>&ldquo;Tasks Are What We Do&rdquo;</blockquote>
+    <blockquote>Tasks Are What We Do</blockquote>
 </section>
 <section>
-    <blockquote>&ldquo;User tasks are the basic building blocks of a story map.&rdquo;</blockquote>
+    <blockquote>User tasks are the basic building blocks of a story map.</blockquote>
 </section>
