minor changes in capitalization and combined the summary

--- a/slides/alternative-stories.html
+++ b/slides/alternative-stories.html
@@ -10,8 +10,8 @@
     <h2>Write it down!</h2>
 </section>
 <section>
-    <h3>Add it to the</h3>
-    <h2>map</h2>
+    <h3>add it to the</h3>
+    <h2>MAP</h2>
 </section>
 <section>
     <h2>Bad mornings?</h2>
