--- a/slides/slice-out-tasks.html
+++ b/slides/slice-out-tasks.html
@@ -22,7 +22,7 @@
     <h3>to reach the goal</h3>
 </section>
 <section>
-    <h1>Fill In</h1>
+    <h2>FILL IN</h2>
     <h3>tasks that are missing</h3>
 </section>
 <section>
