--- a/slides/summary.html
+++ b/slides/summary.html
@@ -1,4 +1,7 @@
 <section>
+    <h1>That's It!</h1>
+</section>
+<section>
     <h2>You’ve learned all the important concepts:</h2>
 </section>
 <section>
