--- a/slides/distill-your-backbone.html
+++ b/slides/distill-your-backbone.html
@@ -8,7 +8,7 @@
 </section>
 <section>
     <h3>label</h3>
-    <h1>Activities</h1>
+    <h1>activities</h1>
 </section>
 <section>
     <h3>put them on</h3>
