--- a/slides/organize-your-story.html
+++ b/slides/organize-your-story.html
@@ -6,7 +6,7 @@
     <h3>from left to right</h3>
 </section>
 <section>
-    <h2>Fill In</h2>
+    <h2>FILL IN</h2>
     <h3>missing details</h3>
 </section>
 <section>
