--- a/slides/summary.html
+++ b/slides/summary.html
@@ -12,8 +12,30 @@
 <section>
     <h2>Tasks have different </h2><h1>goal levels</h1>
 </section>
-<section><h2>Tasks in a map are</h2><h2>arranged in a left-to-right</h2><h1>narrative flow</h1></section>
-<section><h2>The depth of a map contains </h2><h1>variations</h1><h2> and</h2> <h1>alternative tasks</h1></section>
-<section><h2>Tasks are organized by </h2><h1>activities</h1><h2> across the top of the map</h2></section>
-<section><h2>Activities form the </h2><h1>backbone</h1><h2>of the map</h2></section>
-<section><h2>You can</h2> <h1>slice</h1><h2> the map to identify the tasks you’ll need to reach a specific </h2><h1>outcome</h1></section>
+<section>
+    <h2>Tasks in a map are</h2>
+    <h2>arranged in a left-to-right</h2>
+    <h1>narrative flow</h1>
+</section>
+<section>
+    <h2>The depth of a map contains </h2>
+    <h1>variations</h1>
+    <h2> and</h2>
+    <h1>alternative tasks</h1>
+</section>
+<section>
+    <h2>Tasks are organized by</h2>
+    <h1>activities</h1>
+    <h2>across the top of the map</h2>
+</section>
+<section>
+    <h2>Activities form the </h2>
+    <h1>backbone</h1>
+    <h2>of the map</h2>
+</section>
+<section>
+    <h2>You can</h2>
+    <h1>slice</h1>
+    <h2>the map to identify the tasks you’ll need to reach a specific</h2>
+    <h1>outcome</h1>
+</section>
