qr generated using javascript library

--- a/slides/buy-the-book.html
+++ b/slides/buy-the-book.html
@@ -4,11 +4,16 @@
         <img src="resources/userstorymappingbook.jpg">
     </div>
     <div style="float: left; width: 50%; text-align:left">
-        <img src="resources/qr-amazon-com.svg" style="height: 2em; vertical-align:middle" />
-        <a href="http://www.amazon.com/User-Story-Mapping-Discover-Product/dp/1491904909/" >Amazon</a>
+        <a href="http://www.amazon.com/User-Story-Mapping-Discover-Product/dp/1491904909/" >
+            <qr-code data="http://www.amazon.com/User-Story-Mapping-Discover-Product/dp/1491904909/"></qr-code>
+            Amazon
+        </a>
     </div>
-    <div style="float: left; width: 50%; text-align:left">
-        <img src="resources/qr-shop-oreilly-co.svg" style="height: 2em; vertical-align:middle" />
-        <a href="http://shop.oreilly.com/product/0636920033851.do">O'Reilly</a>                       
+    <div style="float: left; width: 50%; text-align:left; margin-top:1em;">
+        <a href="http://shop.oreilly.com/product/0636920033851.do">
+            <qr-code data="http://shop.oreilly.com/product/0636920033851.do"></qr-code>
+            O'Reilly
+        </a>
     </div>
+    
 </div>
