transition fade for image slides

--- a/slides/alternative-stories.html
+++ b/slides/alternative-stories.html
@@ -21,7 +21,7 @@
     <h2>Your ideal morning?</h2>
     <h3 class="fragment">Write it down!</h3>
 </section>
-<section>
+<section data-transition="fade">
     <img class="stretch" src="resources/extract-58.png" />
 </section>
 <section>
