--- a/slides/distill-your-backbone.html
+++ b/slides/distill-your-backbone.html
@@ -14,7 +14,7 @@
     <h3>put them on</h3>
     <h1>TOP</h1>
 </section>
-<section>
+<section data-transition="fade">
     <img class="stretch" src="resources/extract-59.png" />
 </section>
 <section>
