--- a/slides/organize-your-story.html
+++ b/slides/organize-your-story.html
@@ -13,6 +13,6 @@
     <p>I’ll call this left-to-right order</p>
     <h2>the narrative flow</h2>
 </section>
-<section>
+<section data-transition="fade">
     <img class="stretch" src="resources/extract-57.png" />
 </section>
