--- a/slides/slice-out-tasks.html
+++ b/slides/slice-out-tasks.html
@@ -25,7 +25,7 @@
     <h2>FILL IN</h2>
     <h3>tasks that are missing</h3>
 </section>
-<section>
+<section data-transition="fade">
     <img class="stretch" src="resources/extract-60.png" />
 </section>
 <section>
