--- a/slides/write-out-your-story.html
+++ b/slides/write-out-your-story.html
@@ -21,7 +21,7 @@
     <h2>Repeat</h2>
     <h3 class="fragment">until you left for work</h3>
 </section>
-<section>
+    <section data-transition="fade">
     <img class="stretch" src="resources/extract-54.png" />
 </section> 
 <section>
