minor fixes on content

--- a/slides/organize-your-story.html
+++ b/slides/organize-your-story.html
@@ -2,15 +2,21 @@
 <h1>READ IT</h1>
 </section>
 <section>
-    <h2>Tell your story</h2>
-    <h3>from left to right</h3>
+    <h2>Organize</h2>
+    <h3>your tasks in a</h3>
+    <h2>left-to-right flow</h2>
 </section>
 <section>
-    <h2>FILL IN</h2>
+    <h2>Tell</h2>
+    <h3>your story from</h3>
+    <h2>left to right</h2>
+</section>
+<section>
+    <h2>Fill in</h2>
     <h3>missing details</h3>
 </section>
 <section>
-    <p>I’ll call this left-to-right order</p>
+    <h3>I’ll call this left-to-right order</h3>
     <h2>the narrative flow</h2>
 </section>
 <section data-transition="fade">
