update dependencies && summary slide

--- a/slides/buy-the-book.html
+++ b/slides/buy-the-book.html
@@ -1,19 +1,14 @@
 <h2>Buy the book</h2>
 <div class="stretch">
-    <div style="float: left; width:50%; height:100%; text-align: right">
+    <div style="float: left; width:50%; height:80%; text-align: right">
         <img src="resources/userstorymappingbook.jpg">
     </div>
     <div style="float: left; width: 50%; text-align:left">
-        <a href="http://www.amazon.com/User-Story-Mapping-Discover-Product/dp/1491904909/" >
-            <qr-code data="http://www.amazon.com/User-Story-Mapping-Discover-Product/dp/1491904909/"></qr-code>
-            Amazon
-        </a>
+        <qr-code data="http://www.amazon.com/User-Story-Mapping-Discover-Product/dp/1491904909/"></qr-code>
+        <a href="http://www.amazon.com/User-Story-Mapping-Discover-Product/dp/1491904909/">Amazon</a>
     </div>
     <div style="float: left; width: 50%; text-align:left; margin-top:1em;">
-        <a href="http://shop.oreilly.com/product/0636920033851.do">
-            <qr-code data="http://shop.oreilly.com/product/0636920033851.do"></qr-code>
-            O'Reilly
-        </a>
+        <qr-code data="http://shop.oreilly.com/product/0636920033851.do"></qr-code>
+        <a href="http://shop.oreilly.com/product/0636920033851.do">O'Reilly</a>
     </div>
-    
 </div>
