--- a/slides/concepts.html
+++ b/slides/concepts.html
@@ -21,7 +21,8 @@
     <h2>The depth of a map contains </h2>
     <h1>variations</h1>
     <h2> and</h2>
-    <h1>alternative tasks</h1>
+    <h1>alternative</h1>
+    <h2>tasks</h2>
 </section>
 <section>
     <h2>Tasks are organized by</h2>
